--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "serve -s build",
+    "dev": "craco start",
+    "build": "CI=false craco build",
     "test": "craco test",
     "lint-staged": "lint-staged",
     "format": "prettier --write src/**/*.ts{,x}",
@@ -29,6 +30,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
+    "serve": "^14.2.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
