--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,3 +1,12 @@
 dispatch:
-  - url: dev.bsc-evm-compatible-bridge-app.gu.net/*
-    service: bsc-evm-compatible-bridge-app-dev
+  - url: dev.nft-bridge.gu.net/*
+    service: default
+
+  - url: test.nft-bridge.gu.net/*
+    service: nft-bridge-test
+
+  - url: alm.dev.nft-bridge.gu.net/*
+    service: alm-gusandbox-goerli
+
+  - url: alm.test.nft-bridge.gu.net/*
+    service: alm-gusandbox-goerli-test
